# opengeoaimodelshub

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile.mlflow  index.html
.github/workflows/: docker-publish.yaml  docker-publish.yml  mlflow-image-publish.yml
examplemodel/: .env_sample  Dockerfile  MLproject  README.md  dockerfile.test  model.py  model_scratch_pt.py  playground.ipynb  preprocess.py  pyproject.toml  python_env.yaml  requirements.txt  stac_item.json  test.py  validate_stac_mlm.py
examplemodel/.github/: docker-publish.yaml
examplemodel/mlruns/0/: meta.yaml
examplemodel/src/: inference.py  model.py  preprocess.py  stac2esri.py  train.py  utils.py
examplemodel/src/esri/: RefugeeCampDetector.py  inference.py
infra/: .env.template  .gitignore  Readme.md  credentials.sh  docker-compose.yml  install-docker.sh  prune.sh  setup.sh
infra/homepage-config/: .env.template  services.yaml  settings.yaml  widgets.yaml
