[project]
name = "examplemodel"
version = "0.0.1"
description = "Enhanced refugee camp detection model with production-ready STAC-MLM metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "geomltoolkits>=0.3.9",
    "mlflow>=3.1.1",
    "onnx>=1.18.0",
    "onnxscript>=0.3.2",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "pytorch-lightning>=2.5.2",
    "stac-model>=0.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
    "opencv-python>=4.8.0",
    "pystac>=1.8.0",
    "boto3>=1.39.12",
]

[dependency-groups]
validation = [
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
]
